@@ -157,26 +157,67 @@
 		</div>
 		<hr>
 		
-		<div class="column span-7 prepend-5">
-		  <img src="test.jpg" class="pull-1"><hr>
-		  <img src="test.jpg" class="pull-2"><hr>
-		  <img src="test.jpg" class="pull-3"><hr>
-		  <img src="test.jpg" class="pull-4"><hr>
-		  <img src="test.jpg" class="pull-5">
-		</div>
-		<div class="column span-7 append-5 last">
-		  <img src="test.jpg" class="push-1"><hr>
-		  <img src="test.jpg" class="push-2"><hr>
-		  <img src="test.jpg" class="push-3"><hr>
-		  <img src="test.jpg" class="push-4"><hr>
-		  <img src="test.jpg" class="push-5">
-		</div>		
-		
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-		
-		<img src="test.jpg" class="raise-1">
-		<img src="test.jpg" class="raise-2">
-		<img src="test.jpg" class="raise-3">
+		<div class="column span-7">
+		  <h5>TESTING .PULL-1 TO .PULL-5</h5>
+  		<div class="column span-5">
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		</div>
+  		<div class="column span-2 last">
+  		  <p><img src="test-small.jpg" class="top"><hr>
+  		  <img src="test-small.jpg" class="pull-1"><hr>
+  		  <img src="test-small.jpg" class="pull-2"><hr>
+  		  <img src="test-small.jpg" class="pull-3"><hr>
+  		  <img src="test-small.jpg" class="pull-4"><hr>
+  		  <img src="test-small.jpg" class="pull-5"></p>
+  		</div>
+    </div>
+
+		<div class="column span-7">
+		  <h5>TESTING .PUSH-1 TO .PUSH-5</h5>
+  		<div class="column span-2">
+  		  <p><img src="test-small.jpg" class="push-0 top"><hr>
+  		  <img src="test-small.jpg" class="push-1"><hr>
+  		  <img src="test-small.jpg" class="push-2"><hr>
+  		  <img src="test-small.jpg" class="push-3"><hr>
+  		  <img src="test-small.jpg" class="push-4"><hr>
+  		  <img src="test-small.jpg" class="push-5"></p>
+  		</div>		
+  		<div class="column span-5 last">
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		</div>
+  	</div>
+
+
+		<h5>TESTING .LIFT-1 TO .LIFT-5</h5>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<p>
+		  <img src="test-small.jpg" class="lift-1">
+		  <img src="test-small.jpg" class="lift-2">
+		  <img src="test-small.jpg" class="lift-3">
+		  <img src="test-small.jpg" class="lift-4">
+		  <img src="test-small.jpg" class="lift-5">
+		</p>
+
+    <h5>TESTING .DROP-1 TO .DROP-5</h5>
+		<p>
+		  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		  <img src="test-small.jpg" class="drop-1">
+		  <img src="test-small.jpg" class="drop-2">
+		  <img src="test-small.jpg" class="drop-3">
+		  <img src="test-small.jpg" class="drop-4">
+		  <img src="test-small.jpg" class="drop-5">
+		</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		
 		
 		<hr>
